gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong:3.6
          ports:
            - containerPort: 8000
            - containerPort: 8001
          volumeMounts:
            - name: kong-final-config 
              mountPath: /kong
      volumes:
        - name: config-template
          configMap:
            name: kong-config
        - name: kong-final-config
          emptyDir: {}
