gateway/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kong

spec:
  type: LoadBalancer

  selector:
    app: kong

  ports:
    - name: proxy
      port: 80
      targetPort: 8000

    - name: admin
      port: 8001
      targetPort: 8001
