gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fcg-ingress
  annotations:
    konghq.com/strip-path: "true"

spec:
  ingressClassName: kong

  rules:
    - http:
        paths:

          - path: /users
            pathType: Prefix

            backend:
              service:
                name: users-api
                port:
                  number: 80

          - path: /catalog
            pathType: Prefix

            backend:
              service:
                name: catalog-api
                port:
                  number: 80
